--- a/Notes_App/Notes_App/App.xaml
+++ b/Notes_App/Notes_App/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Notes_App"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/Notes_Window.xaml">
+    
     <Application.Resources>
          
     </Application.Resources>
